--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -7,3 +7,5 @@ MESSAGE("PROTO_SOURCES: ${PROTO_SOURCES}")
 
 PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_SOURCES})
 ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
+
+add_dependencies(proto rpc)
