--- a/server/action-server3/rpc/room.yaml
+++ b/server/action-server3/rpc/room.yaml
@@ -8,6 +8,7 @@ contracts:
         message: string
       response:
         # request_id: int32 # auto generate
+        success: bool
         message_id: int64
       notification:
         # notification_id: int32 # auto generate
@@ -20,6 +21,7 @@ contracts:
         message: string
       response:
         # request_id: int32 # auto generate
+        success: bool
         message_id: int64
     created:
       description: 通知
