--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,9 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  torikime-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10.2'
@@ -23,11 +21,22 @@ jobs:
           pip install pipenv --upgrade-strategy=only-if-needed
           pipenv install
           # python torikime.py --help
+  build-action-server:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-ninja@master
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.10.2'
+          architecture: 'x64'
       # install dependencies
+      - name: apt update
+        run: sudo apt-get update
       - name: boost
-        run: sudo apt-get update && sudo apt-get install -yq libboost-all-dev
+        run: sudo apt-get install -yq libboost-all-dev
       - name: protocol buffers
-        run: sudo apt-get update && sudo apt-get install -yq protobuf-compiler libprotobuf-dev
+        run: sudo apt-get install -yq protobuf-compiler libprotobuf-dev
       # build project
       - name: cmake
         run: |
@@ -35,7 +44,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv --upgrade-strategy=only-if-needed
           pipenv install
-          pipenv install pyyaml jinja2
+          pipenv install pyyaml jinja2 inflection
           # python torikime.py --help
           popd
           cd server/action-server3
