--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,15 @@ jobs:
         run: |
           tree server
           tree client/potato/Assets/Scripts
+  docker-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: |
+          pushd server/action-server3
+          docker build -t potato-dev .
+          popd
   torikime-test:
     runs-on: ubuntu-latest
     steps:
