--- a/client/potato/Assets/Scripts/Proto/Proto.asmdef
+++ b/client/potato/Assets/Scripts/Proto/Proto.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "Rpc",
+    "name": "Proto",
     "rootNamespace": "",
-    "references": [
-        "GUID:78cd2e4cce174be4e9dd89c6dc4e2e11"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -12,5 +10,5 @@
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": true
 }
