--- a/server/action-server3/rpc/CMakeLists.txt
+++ b/server/action-server3/rpc/CMakeLists.txt
@@ -41,7 +41,7 @@ add_custom_target(rpc
 
 add_custom_command(
   TARGET rpc
-  COMMAND pipenv run ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${CMAKE_CURRENT_SOURCE_DIR}/../proto -c "${CMAKE_CURRENT_SOURCE_DIR}/../generated/rpc" -s "${CMAKE_SOURCE_DIR}/../../client/potato/Assets/Scripts/Rpc/Generated" -i ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND pipenv run ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${CMAKE_CURRENT_SOURCE_DIR}/../proto/generated -c "${CMAKE_CURRENT_SOURCE_DIR}/../generated/rpc" -s "${CMAKE_SOURCE_DIR}/../../client/potato/Assets/Scripts/Rpc/Generated" -i ${CMAKE_CURRENT_SOURCE_DIR}
   COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${RPC_SOURCES} ../torikime/proto.j2 ../torikime/rpc-cpp.j2 ../torikime/rpc-hpp.j2
