🚚moved again, and sync mouse point

--- a/server/action-server3/CMakeLists.txt
+++ b/server/action-server3/CMakeLists.txt
@@ -59,7 +59,9 @@ FIND_PACKAGE(Protobuf REQUIRED)
 ADD_SUBDIRECTORY(proto)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
-ADD_SUBDIRECTORY(generated/rpc/cpp)
+ADD_SUBDIRECTORY(rpc/generated)
+
+# ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rpc/generated/cpp)
 # file(GLOB SUB_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}" CONFIGURE_DEPENDS "generated/rpc/cpp/*")
 
 list(APPEND ALL_SOURCES ${SUB_SOURCES} ${GEN_SOURCES})
