--- a/server/action-server3/rpc/CMakeLists.txt
+++ b/server/action-server3/rpc/CMakeLists.txt
@@ -1,50 +1,31 @@
-# add_custom_target(rpc
-#   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
-# )
-
 FILE(GLOB_RECURSE RPC_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS "*.yaml")
-# set(RPC_SOURCES
-# room.yaml
-# rpc.yaml
-# )
 MESSAGE("RPC_SOURCES: ${RPC_SOURCES}")
 
-# add_custom_command(
-#   OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
-#   COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${CMAKE_CURRENT_SOURCE_DIR}/../proto -i ${CMAKE_CURRENT_SOURCE_DIR}/${RPC_SOURCES}
-#   COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
-#   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
-#   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${RPC_SOURCES} ../torikime/proto.j2 ../torikime/rpc-cpp.j2
-#   COMMENT "Preprocessing rpcs"
-#   BYPRODUCTS ${CMAKE_CURRENT_SOURCE_DIR}/../proto/*/*.proto ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
-#   )
+# file(READ ${CMAKE_CURRENT_SOURCE_DIR}/rpc.hash hash_old)
+# message(${hash_old})
 
 add_custom_target(rpc
+  # file(TOUCH ${CMAKE_CURRENT_SOURCE_DIR}/rpc.hash hash_old)
+  # file(READ ${CMAKE_CURRENT_SOURCE_DIR}/rpc.hash hash_old)
+  # message(${hash_old})
+  # file(READ ${CMAKE_CURRENT_SOURCE_DIR}/rpc.hash hash_new)
+  # message(${hash_new})
+  COMMAND pipenv run ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${CMAKE_CURRENT_SOURCE_DIR}/../proto/generated -c "${CMAKE_CURRENT_SOURCE_DIR}/../rpc/generated" -s "${CMAKE_SOURCE_DIR}/../../client/potato/Assets/Scripts/Rpc/Generated" -i ${CMAKE_CURRENT_SOURCE_DIR} --cache_dir ${CMAKE_CURRENT_BINARY_DIR}/torikime
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
   DEPENDS ${RPC_SOURCES}
+  COMMAND find ${CMAKE_CURRENT_SOURCE_DIR} -type f -name '*.yaml' | sort | xargs sha1sum | sha1sum > "${CMAKE_CURRENT_SOURCE_DIR}/rpc.hash"
 )
+
+# file(READ ${CMAKE_CURRENT_SOURCE_DIR}/rpc.hash hash_new)
+# message(${hash_new})
 
 # add_custom_command(
 #   TARGET rpc
-#   COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${CMAKE_CURRENT_SOURCE_DIR}/../proto -i ${CMAKE_CURRENT_SOURCE_DIR}/rpc.yaml
+#   PRE_BUILD
+#   COMMAND pipenv run ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${CMAKE_CURRENT_SOURCE_DIR}/../proto/generated -c "${CMAKE_CURRENT_SOURCE_DIR}/../rpc/generated" -s "${CMAKE_SOURCE_DIR}/../../client/potato/Assets/Scripts/Rpc/Generated" -i ${CMAKE_CURRENT_SOURCE_DIR}
 #   COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
 #   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
-#   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/rpc.yaml ../torikime/proto.j2 ../torikime/rpc-cpp.j2
+#   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${RPC_SOURCES}../torikime/proto.j2 ../torikime/rpc-cpp.j2 ../torikime/rpc-hpp.j2 ${CMAKE_CURRENT_SOURCE_DIR}/rpc.hash
 #   COMMENT "Preprocessing rpcs"
-#   BYPRODUCTS ${CMAKE_CURRENT_SOURCE_DIR}/../proto/*/*.proto COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
+#   BYPRODUCTS ${CMAKE_CURRENT_SOURCE_DIR}/../proto/generated/*/*.proto
 #   )
-
-
-# function(torikime output_dir input)
-#   execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${output_dir} -i ${input})
-# endfunction()
-
-
-add_custom_command(
-  TARGET rpc
-  COMMAND pipenv run ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -o ${CMAKE_CURRENT_SOURCE_DIR}/../proto/generated -c "${CMAKE_CURRENT_SOURCE_DIR}/../rpc/generated" -s "${CMAKE_SOURCE_DIR}/../../client/potato/Assets/Scripts/Rpc/Generated" -i ${CMAKE_CURRENT_SOURCE_DIR}
-  COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${RPC_SOURCES} ../torikime/proto.j2 ../torikime/rpc-cpp.j2 ../torikime/rpc-hpp.j2
-  COMMENT "Preprocessing rpcs"
-  BYPRODUCTS ${CMAKE_CURRENT_SOURCE_DIR}/../proto/*/*.proto ${CMAKE_CURRENT_SOURCE_DIR}/rpc.timestamp
-  )
