💩Some fucking fixes

--- a/server/action-server3/CMakeLists.txt
+++ b/server/action-server3/CMakeLists.txt
@@ -62,9 +62,9 @@ ADD_SUBDIRECTORY(proto)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
 ADD_SUBDIRECTORY(rpc)
-ADD_SUBDIRECTORY(rpc/generated)
 add_dependencies(proto rpc)
-add_dependencies(rpc_contracts proto)
+ADD_SUBDIRECTORY(rpc/generated)
+add_dependencies(rpc_contracts rpc proto)
 
 # ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rpc/generated/cpp)
 # file(GLOB SUB_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}" CONFIGURE_DEPENDS "generated/rpc/cpp/*")
